--- a/home.html
+++ b/home.html
@@ -12,7 +12,15 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/donotChange.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <!-- jquery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.3.0/dist/echarts.min.js"></script>
+
+      <!-- bootstrap select picker -->
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
   </head>
   <body>
     <div class="container-fluid p-0">
@@ -27,7 +35,7 @@
           <div class="search-container">
             <div class="search-box">
               <i class="fa-solid fa-magnifying-glass"></i>
-              <input type="text" placeholder="Search" />
+              <input type="text" placeholder="Search" id="headerSearch" />
               <i class="fa-solid fa-xmark clear-icon"></i>
             </div>
           </div>
@@ -67,7 +75,7 @@
 
         <div class="content-container">
           <!-- Sidebar -->
-          <div class="sidebar" id="sidebar">
+          <div class="dashboard-sidebar" id="sidebar">
             <div class="sidebar-menu">
               <a href="#" class="menu-item active" data-tooltip="Home">
                 <img src="images/icons/home_icon.svg" alt="Home" class="menu-icon" />
@@ -154,14 +162,14 @@
               <!-- New Orders sections -->
 
               <div class="new-order--cta">
-                <h1 class="new-orders-heading">New Orders</h1>
+                <h1 class="new-orders-heading mb-0">New Orders</h1>
                 <button class="view-all-btn">View All</button>
               </div>
               <section class="new-orders-wrapper" id="new-orders"></section>
 
               <!-- Weekly Delivery Trend and Active Orders -->
 
-              <section class="weeklyTrend-and-activeOrders">
+              <section class="weeklyTrend-and-activeOrders ">
                 <div class="weeklyTrend-container">
                   <h1 class="weeklyTrend-heading">Weekly Delivery Trend</h1>
                   <div class="horizontal-line"></div>
@@ -183,7 +191,7 @@
 
               <!-- Available Credits section -->
               <h1 class="credits-heading">Available Credits</h1>
-              <section class="credits">
+              <section class="credits ">
                 <div class="credit-details">
                   <div class="available-credits">AVAILABLE CREDITS</div>
                   <div class="credits-amount">1,245</div>
@@ -197,7 +205,7 @@
               </section>
 
               <!-- Notifications and Messages section -->
-              <section class="notifications-messages">
+              <section class="notifications-messages ">
                 <div class="recent-notifications">
                   <h1 class="recent-notification-heading">Recent Notifications</h1>
                   <div id="notification-wrapper"></div>
@@ -250,6 +258,8 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+     <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.14.0-beta2/js/bootstrap-select.min.js"></script>
     <!-- Custom JS -->
     <script src="js/donotChangescript.js"></script>
     <script src="js/script.js"></script>
@@ -262,7 +272,7 @@
           credits: 1245,
           rating: 4.8,
           profileViews: 12,
-          todaysEarnings: 64.5,
+          todaysEarnings: 4.5,
         },
 
         stats: {
@@ -689,11 +699,11 @@
                           <span id="new-order-item-count">${itemCount} Items</span>
                           <span id="new-order-total-amount">$${total}</span>
                       </div>
-                      <div class="order-confirmation">
-                          <button class="accept-btn
-                              ">Accept</button>
-                          <button class="decline-btn">Decline</button>
-                      </div>
+                     <div class="d-flex justify-content-between">
+    <button class="btn btn-submit half-btn">Accept</button>
+    <button class="btn btn-secondary half-btn">Decline</button>
+  </div>
+                     
                   </div>
               </div> `
       }
