--- a/home.html
+++ b/home.html
@@ -167,9 +167,10 @@
               <!-- Weekly Delivery Trend and Active Orders -->
 
               <section class="weeklyTrend-and-activeOrders">
+                <h1 class="weeklyTrend-heading-mobile">Weekly Delivery Trend</h1>
                 <div class="weeklyTrend-container dashboard-shadow">
                   <h1 class="weeklyTrend-heading">Weekly Delivery Trend</h1>
-                  <div class="horizontal-line"></div>
+                  <div class="horizontal-line line-on-mobile"></div>
                   <div class="weekly-delivery-trend">
                     <div id="weeklyChartECharts"></div>
                   </div>
@@ -297,7 +298,7 @@
           {
             id: 'ORD-1202',
             restaurant: {
-              name: 'Burger Palace',
+              name: 'Burger Palace Mumbai Goa etc',
               distance: '1.2km',
               pickupInstructions: 'Use back entrance',
             },
@@ -312,7 +313,7 @@
           {
             id: 'ORD-1203',
             restaurant: {
-              name: 'Pizza Hut',
+              name: 'Pizza Hut Punjab Delhi',
               distance: '0.8km',
             },
             readyIn: '2:15',
@@ -673,7 +674,7 @@
       }
       //This function generates required Markup
       function generateNewOrderMarkup(orderID, restaurant, paymentMethod, distance, time, payout, itemCount, total) {
-        return ` <div class="new-orders-container dashboard-shadow">
+        return ` <div class="new-orders-container dashboard-shadow modal-btn">
                       <div class="new-order-details">
                           <div class="order-info-line--one">
                               <span class="id-and-restaurant">
@@ -696,7 +697,7 @@
                               <span id="new-order-total-amount">$${total}</span>
                           </div>
                          <div class="d-flex justify-content-between">
-        <button class="btn btn-submit half-btn">Accept</button>
+        <button class="btn btn-submit half-btn ">Accept</button>
         <button class="btn btn-secondary half-btn">Decline</button>
       </div>
 
@@ -808,7 +809,6 @@
       // This function calls all the other function that display data dynamically
 
       function renderFiles() {
-        const openModelBtn = document.querySelectorAll('.accept-btn')
         // Currently, All these functons are called as per the data object
         //When Data will be fetched from API, these functions can be called accordingly to display data dynamically
         //Functions are called in way to maintain the layout as it is in Figma
@@ -819,7 +819,7 @@
 
         showNewOrderDetails(0)
         showNewOrderDetails(1)
-
+        const openModel = document.querySelectorAll('.modal-btn')
         //Similar Logic as described in the comment above,When data will be fetched from API, then these individual index calls will be replaced with map method logic
         showActiveOrderDetails(0)
         showActiveOrderDetails(1)
@@ -855,7 +855,7 @@
           modal.classList.remove('active')
         }
 
-        openModelBtn.forEach((btn) => {
+        openModel.forEach((btn) => {
           btn.addEventListener('click', openModal)
         })
 
